[project]
name = "ahc038"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "toufu-24", email = "120612884+toufu-24@users.noreply.github.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "gym>=0.26.2",
    "pyqt6>=6.7.1",
    "gymnasium[box2d]>=0.29.1",
    "pygame>=2.6.1",
    "clang>=17.0.6",
    "keras>=3.6.0",
    "tensorflow>=2.17.0",
    "tqdm>=4.66.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahc038"]
