[project]
name = "2024-07-31"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "toufu24", email = "120612884+toufu-24@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_07_31"]
